# url-shortener

./: Cargo.toml  Dockerfile  README.md  cmds.sh  compose.yaml  req.sh  routes.sh
.github/workflows/: build.yaml
migrations/: 20251107124804_init.down.sql  20251107124804_init.up.sql
prometheus/: prometheus.yaml
src/: handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  routes.sh  state.rs
