[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shorty"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
base62 = "2.2.3"
deadpool-redis = "0.22.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
prometheus = "0.14.0"
redis = "0.32.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros", "migrate" ] }
